--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -44,16 +44,11 @@ a {
   cursor: pointer;
 }
 
-.navbar {
-  > li {
-    list-style: none;
-    cursor: pointer;
-    padding: 3px;
-    margin: 3px;
-    &:hover {
-      text-decoration: underline;
-    }
-  }
+.navbar > li {
+  list-style: none;
+  cursor: pointer;
+  padding: 3px;
+  margin: 3px;
 }
 
 .overflow {
@@ -67,7 +62,6 @@ a {
 
   width: 100%;
   height: 100%;
-  /* // background: var(--white); */
 }
 
 .sidebar li {
@@ -76,10 +70,6 @@ a {
     line-height: 6rem;
     list-style: none;
     cursor: pointer;
-
-    &:hover {
-      text-decoration: underline;
-    }
   }
 
 #app {
