--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -55,22 +55,15 @@ a {
   overflow: auto;
 }
 
-.sidebar {
-  position: absolute;
-  top: 45px;
-  right: 0;
-
-  width: 100%;
-  height: 100%;
+.italic {
+  font-style: italic;
 }
 
-.sidebar li {
-    color: var(--blue);
-    font-size: 3rem;
-    line-height: 6rem;
-    list-style: none;
-    cursor: pointer;
-  }
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top:0;
+}
 
 #app {
   height: 100vh;
@@ -158,6 +151,10 @@ a {
 
 .resume {
   height: 100%;
+}
+
+.indent {
+  text-indent: 12px;
 }
 
 .nav-icon {
