--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -31,24 +31,18 @@
 * {
   box-sizing: border-box;
   font-family: Montserrat;
+  touch-action: manipulation;
 }
 
 html,
 body {
   margin: 0;
-  /* overflow: hidden; */
+   height: 100%
 }
 
 a {
   text-decoration: none;
   cursor: pointer;
-}
-
-.navbar > li {
-  list-style: none;
-  cursor: pointer;
-  padding: 3px;
-  margin: 3px;
 }
 
 .overflow {
@@ -62,7 +56,7 @@ a {
 .sticky {
   position: -webkit-sticky;
   position: sticky;
-  top:0;
+  top: 0px;
 }
 
 #app {
