--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -37,7 +37,7 @@
 html,
 body {
   margin: 0;
-   height: 100%
+  height: 100vh;
 }
 
 a {
@@ -60,7 +60,7 @@ a {
 }
 
 #app {
-  height: 100vh;
+  padding-bottom: calc(1em + env(safe-area-inset-bottom));
 }
 
 #header {
@@ -72,25 +72,6 @@ a {
 
 .header-text {
   width: 80%;
-}
-
-.body {
-  padding: 4px;
-  width: 100%;
-  height: 100%;
-  margin: 0 auto;
-}
-
-.page {
-  width: 100vw;
-  margin: 0 auto;
-  height: 80vh;
-  /* overflow: auto; */
-}
-
-.repo {
-  flex-basis: 30%;
-  margin: 18px;
 }
 
 .typewriter {
@@ -129,22 +110,6 @@ a {
 #logo-header {
   height: 80px;
   max-width: 300px;
-}
-
-#asterisk {
-  font-size: 3em;
-}
-
-#asterisk.w3-white {
-  background-color: white !important;
-}
-
-#asterisk.w3-black {
-  background-color: black !important;
-}
-
-.resume {
-  height: 100%;
 }
 
 .indent {
@@ -190,41 +155,3 @@ a {
   border-radius: 50%;
 }
 
-
-.blobs-container {
-  display: flex;
-}
-
-.blob {
-  background: black;
-  border-radius: 50%;
-  box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
-  margin: 10px;
-  height: 20px;
-  width: 20px;
-  transform: scale(1);
-  animation: pulse-black 2s infinite;
-}
-
-.blob.red {
-  background: rgba(255, 82, 82, 1);
-  box-shadow: 0 0 0 0 rgba(255, 82, 82, 1);
-  animation: pulse-red 2s infinite;
-}
-
-@keyframes pulse-red {
-  0% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(255, 82, 82, 0.7);
-  }
-
-  70% {
-    transform: scale(1);
-    box-shadow: 0 0 0 10px rgba(255, 82, 82, 0);
-  }
-
-  100% {
-    transform: scale(0.95);
-    box-shadow: 0 0 0 0 rgba(255, 82, 82, 0);
-  }
-}
