--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -73,13 +73,22 @@ a {
   transition-duration: 0.6s;
 }
 
-.glass {
-  top: -20px;
-  height: 100px;
-  background-color: rgba(245, 245, 248, .85);
-  backdrop-filter: blur(1px);
-}
 
+.glass {
+    margin: 0 1rem 0 0;
+    background-color: #ffffff7d;
+    margin: 2rem;
+    border-radius: 12px;
+    padding: 1rem;
+    box-shadow: 0 10px 15px rgb(0 0 0 / 20%);
+    box-sizing: border-box;
+    width: calc(100% - 4rem);
+    color: rgba(0,0,0,0.8);
+    backdrop-filter: blur(33px);
+    background-blend-mode: overlay;
+    display: flex;
+    align-items: center;
+}
 .typewriter {
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   white-space: nowrap; /* Keeps the content on a single line */
