--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+@import url("./w3-pro.css");
+@import url("./utils.css");
+
 :root {
   --blue: #042532;
   --indigo: #8e44ad;
@@ -73,6 +76,7 @@ a {
   min-height: 100px;
   transition-duration: 0.6s;
 }
+
 
 .glass {
     margin: 0 1rem 0 0;
