--- a/src/styles/bottom-sheet.css
+++ b/src/styles/bottom-sheet.css
@@ -103,7 +103,7 @@ button {
 
   overflow-y: hidden;
 
-  --default-transitions: transform 0.5s, border-radius 0.5s;
+  --default-transitions: transform 0.5s, width, border-radius 0.5s;
 
   transition: var(--default-transitions);
   transform: translateY(0);
@@ -113,6 +113,7 @@ button {
   height: 30vh;
 
   box-sizing: border-box;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
 
 .sheet #contents:not(.not-selectable) {
@@ -121,6 +122,8 @@ button {
 
 .sheet #contents.fullscreen {
   border-radius: 0;
+  max-width: none;
+  transition:   width, height 0.5s;
 }
 
 .sheet[aria-hidden="true"] #contents {
@@ -140,9 +143,20 @@ button {
 
 .sheet .draggable-thumb {
   width: inherit;
-  height: 0.25rem;
+  height: 0.5rem;
   background: var(--divider);
   border-radius: 0.125rem;
+  transition: width, height 0.4s ease-in;
+}
+
+.sheet .draggable-thumb:hover {
+  height: 1.2rem;
+  width: 4rem;
+  /* min-height: 40px;
+  min-width: 40px;
+  max-height: 40px; */
+  /* max-width: 40px; */
+  transition: width, height 0.4s ease-in;
 }
 
 .sheet .close-sheet {
