--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -67,7 +67,7 @@ a {
 
 #app {
   height: 100dvh;
-  padding-bottom: calc(1em + env(safe-area-inset-bottom));
+  padding-bottom: calc(1rem + env(safe-area-inset-bottom));
 }
 
 #header {
