--- a/src/styles/bottom-sheet.css
+++ b/src/styles/bottom-sheet.css
@@ -22,21 +22,8 @@
   }
 }
 
-/* html,
-body {
-  height: 100%;
-} */
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-
-  overflow: hidden;
-  line-height: 1.5;
-
-  -webkit-tap-highlight-color: transparent;
-}
-
+#bottomsheet >
+a,
 button,
 input,
 textarea,
@@ -53,6 +40,18 @@ textarea,
   background: var(--background);
   color: var(--foreground);
 }
+
+.body {
+  background: var(--background);
+  color: var(--foreground);
+
+  overflow: scroll;
+  line-height: 1.5;
+
+  -webkit-tap-highlight-color: transparent;
+}
+
+
 
 textarea {
   resize: none;
@@ -111,8 +110,6 @@ button {
 
   background: var(--background);
 
-  overflow-y: hidden;
-
   --default-transitions: transform 0.5s, width, box-shadow, height, border-radius 0.5s;
 
   transition: var(--default-transitions);
@@ -167,9 +164,10 @@ button {
   transition: width 0.4s  ease-in;
 }
 
-.sheet .close-sheet {
+.sheet a.close-sheet {
   border: none;
-  padding: 0.7rem;
+  font-size: 2rem;
+  transform: translate(-25px, 5px);
 }
 
 .sheet .body {
