--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -174,3 +174,21 @@ a {
   overflow-y:scroll; */
 }
 
+#me {
+  object-fit: contain;
+  border-radius: 10em;
+  will-change: transform;
+  transition: all 0.6s cubic-bezier(0.33, 1, 0.68, 1);
+  width:3px;
+  height:2px;
+  max-width: 100%;
+}
+
+.hide {
+  opacity: 0;
+}
+
+.show {
+  opacity: 1;
+}
+
