--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -198,7 +198,7 @@ a {
   opacity: 1;
 }
 
-.img-placeholder {
+.canvas-placeholder {
   width: 100%;
   height: 0;
   padding-bottom: 56.25%;
@@ -207,7 +207,7 @@ a {
   position: relative;
 }
 
-.img-placeholder img {
+.canvas-placeholder img {
   position: absolute;
   top: 0;
   left: 0;
